# Localizing-Visual-Sounds-the-Hard-Way

./: .gitignore  model.py  mv_data.py  pyproject.toml  test.py
datasets/: dataloader.py
models/: audio_convnet.py  image_convnet.py
